integration-tests/src/snapshots/integration_tests__tests__basic_operation@windows.snap
---
source: integration-tests/src/lib.rs
expression: result
---
Exit status: exit code: 0
STDOUT:
bat 0.16.0

STDERR:
🔧 Downloading <bat 0.16.0> (bat.zip) from <https://github.com/sharkdp/bat/releases/download/v0.16.0/bat-v0.16.0-i686-pc-windows-msvc.zip>


