integration-tests/src/snapshots/integration_tests__tests__coreutils-3.snap
---
source: integration-tests/src/lib.rs
expression: result
---
Exit status: exit code: 0
STDOUT:
bar

STDERR:


