integration-tests/src/snapshots/integration_tests__tests__coreutils-4.snap
---
source: integration-tests/src/lib.rs
expression: result
---
Exit status: exit code: 0
STDOUT:
0.0.1.1

STDERR:


