integration-tests/src/snapshots/integration_tests__tests__coreutils.snap
---
source: integration-tests/src/lib.rs
expression: result
---
Exit status: exit code: 0
STDOUT:
🔧 ⏳ Downloading coreutils 0.0.1.1🔧 ✅ Downloading coreutils 0.0.1.1

STDERR:
🔧 Download complete!


